# SDIZO

./: README.md
sdizo1/: CMakeLists.txt  bst.cpp  bst.h  dynArray.h  dynamicArray.cpp  dynamicArray.h  fileGenerator.cpp  fileReader.cpp  heap.h  listElement.h  main.cpp  twoWayList.cpp  twoWayList.h
sdizo2_final/: BellmanFordAlgorithm.cpp  CMakeLists.txt  DijkstraAlgorithm.cpp  Graph.cpp  main.cpp
